lib_LTLIBRARIES = libfmatvec.la
libfmatvec_la_SOURCES = blas_extensions_double.cc \
			diagonal_matrix_double.cc \
			general_matrix_double.cc \
			linear_algebra_double.cc \
			memory.cc \
			row_vector_double.cc \
			square_matrix_double.cc \
			symmetric_matrix_double.cc \
			vector_double.cc \
			band_matrix_double.cc\
			sparse_matrix_double.cc\
			index.cc

fmatvecincludedir=$(includedir)/fmatvec
fmatvecinclude_HEADERS = blas_extensions_double.h \
			 diagonal_matrix.h \
			 fmatvec.h \
			 general_matrix.h \
			 linear_algebra_double.h \
			 linear_algebra.h \
			 matrix.h \
			 memory.h \
			 row_vector.h \
			 square_matrix.h \
			 symmetric_matrix.h \
			 types.h \
			 vector.h \
			 band_matrix.h\
			 sparse_matrix.h\
			 index.h

