lib_LTLIBRARIES = libfmatvec.la
libfmatvec_la_LDFLAGS = -version-info @LIBFMATVEC_VERSION_INFO@
libfmatvec_la_SOURCES = blas_extensions_double.cc \
			diagonal_matrix_double.cc \
			general_matrix_double.cc \
			general_matrix_int.cc \
			linear_algebra_double.cc \
			_memory.cc \
			row_vector_double.cc \
			square_matrix_double.cc \
			symmetric_matrix_double.cc \
			vector_double.cc \
			vector_int.cc \
			band_matrix_double.cc\
			sparse_matrix_double.cc\
			index.cc\
			wrapper.cc

fmatvecincludedir=$(includedir)/fmatvec
fmatvecinclude_HEADERS = blas_extensions_double.h \
			 diagonal_matrix.h \
			 fmatvec.h \
			 general_matrix.h \
			 linear_algebra_double.h \
			 linear_algebra.h \
			 matrix.h \
			 _memory.h \
			 row_vector.h \
			 square_matrix.h \
			 symmetric_matrix.h \
			 types.h \
			 vector.h \
			 band_matrix.h\
			 sparse_matrix.h\
			 index.h\
			 general_fixed_matrix.h\
			 fixed_square_matrix.h\
			 fixed_symmetric_matrix.h\
			 fixed_vector.h\
			 fixed_row_vector.h\
			 wrapper.h

