lib_LTLIBRARIES = libfmatvec.la
libfmatvec_la_LDFLAGS = -version-info @LIBFMATVEC_VERSION_INFO@
libfmatvec_la_SOURCES = blas_extensions_double.cc \
			diagonal_matrix_double.cc \
			general_matrix_double.cc \
			general_matrix_int.cc \
			linear_algebra_double.cc \
			_memory.cc \
			row_vector_double.cc \
			square_matrix_double.cc \
			symmetric_matrix_double.cc \
			vector_double.cc \
			vector_int.cc \
			band_matrix_double.cc\
			sparse_matrix_double.cc\
			index.cc\
			wrapper.cc

fmatvecincludedir=$(includedir)/fmatvec
fmatvecinclude_HEADERS = blas_extensions_double.h \
			 diagonal_matrix.h \
			 fmatvec.h \
			 general_matrix.h \
			 linear_algebra_double.h \
			 linear_algebra.h \
			 linear_algebra_fixed.h \
			 linear_algebra_var.h \
			 linear_algebra_fixed_var.h \
			 linear_algebra_var_fixed.h \
			 matrix.h \
			 _memory.h \
			 row_vector.h \
			 square_matrix.h \
			 symmetric_matrix.h \
			 types.h \
			 vector.h \
			 band_matrix.h\
			 sparse_matrix.h\
			 index.h\
			 fixed_general_matrix.h\
			 fixed_square_matrix.h\
			 fixed_symmetric_matrix.h\
			 fixed_vector.h\
			 fixed_row_vector.h\
			 var_general_matrix.h\
			 var_symmetric_matrix.h\
			 var_vector.h\
			 fixed_var_general_matrix.h\
			 var_fixed_general_matrix.h\
			 wrapper.h

